# 5G-PRACH-Smart-Jammer

./: .gitignore  .project  CMakeLists.txt  README.md  gNB-config-aw2s-sncluster.conf  mec-flexric.conf
common/utils/T/: CMakeLists.txt  T_messages.txt  check_vcd.c
common/utils/T/tracer/hacks/: multi-rru-clean.c
common/utils/alg/lock_guard/: CMakeLists.txt  lock_guard.h  test.c
common/utils/telnetsrv/: CMakeLists.txt  telnetsrv.c  telnetsrv.h  telnetsrv_5Gue_measurements.c  telnetsrv_enb_measurements.c  telnetsrv_gnb_measurements.c  telnetsrv_measurements.c  telnetsrv_measurements.h  telnetsrv_proccmd.c  telnetsrv_proccmd.h
common/utils/websrv/: CMakeLists.txt  websrv.c  websrv.h  websrv_CMakeLists.txt  websrv_noforms.c  websrv_noforms.h  websrv_scope.c  websrv_websockets.c
common/utils/websrv/DOC/: websrv.md  websrvuse.md
common/utils/websrv/frontend/: angular.json  package-lock.json  package.json
common/utils/websrv/frontend/src/app/: app-routing.module.ts  app.component.html  app.component.ts  app.module.ts
common/utils/websrv/frontend/src/app/api/: commands.api.ts  help.api.ts  scope.api.ts
common/utils/websrv/frontend/src/app/charts/: llr.dataset.ts  wf.dataset.ts
common/utils/websrv/frontend/src/app/components/commands/: commands.component.css  commands.component.html  commands.component.scss  commands.component.ts
common/utils/websrv/frontend/src/app/components/dialog/: dialog.component.css  dialog.component.html  dialog.component.ts
common/utils/websrv/frontend/src/app/components/logger/: logger.component.html  logger.component.scss  logger.component.ts
common/utils/websrv/frontend/src/app/components/question/: question.component.html  question.component.ts
common/utils/websrv/frontend/src/app/components/scope/: scope.component.css  scope.component.html  (+1 more)
common/utils/websrv/frontend/src/app/controls/: cmd.control.ts  info.control.ts  module.control.ts  param.control.ts  row.control.ts  var.control.ts
common/utils/websrv/frontend/src/app/controls copy/: cmd.control.ts
common/utils/websrv/frontend/src/app/dataSets/: iq.dataset.ts  wf.dataset.ts
common/utils/websrv/frontend/src/app/interceptors/: error.interceptor.ts
common/utils/websrv/frontend/src/app/services/: dialog.service.ts  download.service.ts  rxws.service.ts  websocket.service.ts  websocket2.service.ts
common/utils/websrv/frontend/src/environments/: environment.prod.ts  environment.ts
openair1/PHY/TOOLS/: CMakeLists.txt  cadd_vv.c  cdot_prod.c  cmult_sv.c  cmult_vv.c  lte_enb_scope.c  lte_phy_scope.c  lte_ue_scope.c  nr_phy_qt_scope.cpp  nr_phy_qt_scope.h  nr_phy_scope.c  oai_dfts.c  oai_dfts_neon.c  phy_scope.h  phy_scope_interface.h  signal_energy.c  time_meas.h  tools_defs.h
openair2/E1AP/MESSAGES/: CMakeLists.txt
openair2/E2AP/: CMakeLists.txt
openair2/E2AP/agent/: CMakeLists.txt  e2_agent.c  e2_agent.h  e2_agent_api.c  e2_agent_api.h  e2ap_agent.c  e2ap_agent.h  endpoint_agent.c  endpoint_agent.h  msg_handler_agent.c  msg_handler_agent.h  plugin_agent.c  plugin_agent.h
openair2/E2AP/lib/: CMakeLists.txt  ind_event.h  pending_event_ric.h
openair2/E2AP/lib/ep/: CMakeLists.txt  e2ap_ep.c  e2ap_ep.h  sctp_msg.h
openair2/E2AP/lib/msg_hand/: CMakeLists.txt  reg_e2_nodes.c  reg_e2_nodes.h
openair2/E2AP/lib/v1/: CMakeLists.txt
openair2/E2AP/lib/v1/ap/: CMakeLists.txt  e2ap_ap.h  e2ap_ap_asn.c  type_defs.h
openair2/E2AP/lib/v1/ap/dec/: CMakeLists.txt  e2ap_msg_dec_asn.c  e2ap_msg_dec_asn.h  e2ap_msg_dec_fb.c  e2ap_msg_dec_fb.h
openair2/E2AP/lib/v1/ap/e2ap_types/: CMakeLists.txt  ric_control_ack.h  ric_control_failure.h  ric_control_request.h  ric_indication.h  ric_subscription_request.h
openair2/E2AP/lib/v1/ap/e2ap_types/common/: e2ap_global_node_id.h  e2ap_node_component_config_update.h  e2ap_ran_function.h  e2ap_tnl_information.h  ric_action.h  transport_layer_info.h
openair2/E2AP/lib/v1/ap/enc/: CMakeLists.txt  e2ap_msg_enc_asn.c  e2ap_msg_enc_asn.h  e2ap_msg_enc_fb.c  e2ap_msg_enc_fb.h
openair2/E2AP/lib/v1/ap/free/: CMakeLists.txt
openair2/E2AP/lib/v1/ap/ie/: CMakeLists.txt
openair2/E2AP/lib/v1/ap/ie/asn/: e2ap-v01.01.cmake  gen_asn.py
openair2/E2AP/sm/: CMakeLists.txt
openair2/E2AP/sm/agent_if/ans/: sm_ag_if_ans.h
openair2/E2AP/sm/agent_if/read/: sm_ag_if_rd.h
openair2/E2AP/sm/agent_if/write/: sm_ag_if_wr.h
openair2/E2AP/sm/kpm_sm_v2.02/: CMakeLists.txt  kpm_sm_agent.c  kpm_sm_ric.c
openair2/E2AP/sm/kpm_sm_v2.02/dec/: kpm_dec_asn.c  kpm_dec_asn.h
openair2/E2AP/sm/kpm_sm_v2.02/enc/: kpm_enc_asn.c  kpm_enc_asn.h  kpm_enc_plain.h
openair2/E2AP/sm/kpm_sm_v2.02/ie/: kpm_data_ie.c  kpm_data_ie.h
openair2/E2AP/sm/kpm_sm_v2.02/ie/asn/: CMakeLists.txt  e2sm-kpmv2.02.cmake
openair2/E2AP/test/: CMakeLists.txt  test_e2ap_enc_dec_asn.c  test_e2ap_enc_dec_fb.c  test_e2ap_encode_asn.c
openair2/E2AP/util/: CMakeLists.txt  conf_file.c
openair2/E2AP/util/alg_ds/alg/: alg.h  find.c  find.h
openair2/E2AP/util/alg_ds/ds/assoc_container/: assoc_generic.h
openair2/E2AP/util/alg_ds/ds/seq_container/: seq_generic.h
openair2/F1AP/test/: CMakeLists.txt  cp_asn_to_ir.c  cp_asn_to_ir.h  cp_ir_to_asn.c  cp_ir_to_asn.h  defer.h  enc_dec_f1ap.c  enc_dec_f1ap.h  gen_rnd_data.c  gen_rnd_data.h  test.c
openair2/F1AP/test/f1ap_types/: CMakeLists.txt  ab_info_iab_donor_cu.h  activate_cell.c  activate_cell.h  add_pdcp_dup_tnl.c  add_pdcp_dup_tnl.h  alloc_retention_prio.c  alloc_retention_prio.h  av_snpn_id.h  avail_plmn.h  bad_address.h  bap_address.h  bh_info.h  bh_rlc_chn_failed_tbs_lst.h  brdcst_PLMN_id_info.c  brdcst_PLMN_id_info.h  carrier_lst.h  cause_f1ap.c  cause_f1ap.h  cell_dir.h  cell_type.h  cell_ul_conf.h  cells_to_be_barred.c  cells_to_be_barred.h  cells_to_be_deact.c  cells_to_be_deact.h  cp_trans_layer_info.c  cp_trans_layer_info.h  criticality_diagnostic_f1ap.h  criticallity_diagnostic_f1ap.c  criticallity_diagnostic_f1ap.h  criticallity_diagnostic_ie_f1ap.c  criticallity_diagnostic_ie_f1ap.h  cu_to_du_rrc_info.c  cu_to_du_rrc_info.h  dl_up_tnl_info_tbs.c  dl_up_tnl_info_tbs.h  drb_failed_setup_item.h  drb_info.c  drb_info.h  (+148 more)
(+1252 files in other folders)
